# ChangeLog for net-libs/gnutls
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/gnutls/ChangeLog,v 1.203 2009/06/09 09:34:29 arfrever Exp $

*gnutls-2.9.1 (09 Jun 2009)

  09 Jun 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -gnutls-2.9.0.ebuild, +gnutls-2.9.1.ebuild:
  Version bump.

  01 Jun 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  gnutls-2.8.0.ebuild, gnutls-2.9.0.ebuild:
  Fix installation of documentation (bug #271944).

*gnutls-2.9.0 (28 May 2009)
*gnutls-2.8.0 (28 May 2009)

  28 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -gnutls-2.7.12.ebuild, -gnutls-2.7.13.ebuild, +gnutls-2.8.0.ebuild,
  +gnutls-2.9.0.ebuild:
  Version bumps.

*gnutls-2.7.13 (25 May 2009)

  25 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -gnutls-2.7.11.ebuild, +gnutls-2.7.13.ebuild:
  Version bump.

*gnutls-2.7.12 (20 May 2009)

  20 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -gnutls-2.7.10.ebuild, +gnutls-2.7.12.ebuild:
  Version bump.

*gnutls-2.7.11 (19 May 2009)

  19 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -files/gnutls-2.6.0-openpgp-selftest.patch, -gnutls-2.6.4.ebuild,
  -gnutls-2.6.5.ebuild, -gnutls-2.6.5-r1.ebuild, -gnutls-2.7.8.ebuild,
  -files/gnutls-2.7.8-lzo.patch, +gnutls-2.7.11.ebuild,
  -files/CVE-2009-1415.patch, -files/CVE-2009-1416.patch,
  -files/CVE-2009-1417.patch:
  Version bump.

*gnutls-2.7.10 (15 May 2009)

  15 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -gnutls-2.7.7.ebuild, +gnutls-2.7.10.ebuild:
  Version bump.

  06 May 2009; Raúl Porcel <armin76@gentoo.org> gnutls-2.6.6.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #267774

*gnutls-2.7.8 (04 May 2009)

  04 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +gnutls-2.7.8.ebuild, +files/gnutls-2.7.8-lzo.patch:
  Version bump.
