@@ -1,9 +1,9 @@
 AUX gnutls-2.6.0-cxx-configure.in.patch 502 RMD160 fdd7f402f2a9122f8d7db9b165670c42d83abeb8 SHA1 748b7a0f0b689169054970993d7b4a6331f52c33 SHA256 c7a3ff932c467d08b27eee7e8b5bd1ce97b200328fc90478dee5ea3a59b18f71
 DIST gnutls-2.6.6.tar.bz2 5116385 RMD160 dc6e717e38741628508208244f07fed8faedb13c SHA1 d1693e611aa7270f14bc500bd56ef529ffcb1703 SHA256 03d85b8b51ca7885740c69b87663963c58fe7c9672da0a43e45732078fabdc9e
-DIST gnutls-2.8.0.tar.bz2 6177498 RMD160 ad9d356ab55567ffc65c7fa4f48d8594a1cd5981 SHA1 7c102253bb4e817f393b9979a62c647010312eac SHA256 18a85a54aa2a26969e7bc91af06166a831182496c0cc215a032e7376f7b5129b
+DIST gnutls-2.8.1.tar.bz2 6178662 RMD160 3b0d7a80a60dfc3222357d2c83a7ec32bd2c8e33 SHA1 b5fd364848709393d05def7e926caddd27169525 SHA256 a0300966a9761444b1e583c676f6c5c81e916897ea7d2e44d0c732c9d6e9c1ea
 DIST gnutls-2.9.1.tar.bz2 6116679 RMD160 e219ca10a3918340c4defe71391af552b48739e4 SHA1 51ec5ed5670593e7a9f9d2c07da4086eef733970 SHA256 6207114a7c476187c9498ca5cf952e5e815932af87cd304eadf0ddf2d4496e7d
 EBUILD gnutls-2.6.6.ebuild 2308 RMD160 61b3ccbbc81ede2805b4343170601af5107596ff SHA1 90c306b4221a31c2423fe96cc1a2dbfce9167293 SHA256 0070991bc9a4408ff8c907be124c3fcddf48e1bb7a08424df3fc587abddfe449
-EBUILD gnutls-2.8.0.ebuild 2376 RMD160 dd5abca8c14e19de59530726eea72bc4e49c4c22 SHA1 f6c1fcb2638f6be66e76180a3aaec266d9d4dfcb SHA256 2ccad5ff10a4d4854fca6b16a707df6ac38f5e69aa457cdf13345b6384fb34b5
+EBUILD gnutls-2.8.1.ebuild 2524 RMD160 dcb14252b6d8a51681ba0c5ef34279b5c088f60a SHA1 656d8e5894337e460f7b5506a721ee68b05f2775 SHA256 3d51c8d22627477ade5715936c77e796dcc41bc59f10308c09ae430466ff0463
 EBUILD gnutls-2.9.1.ebuild 2524 RMD160 14184aa042b51dd371c6a00da1e01e6784c89a35 SHA1 420c556d82424b3bd24db3d887b42957ddd08b4b SHA256 b9270ea7f60d33309bd18c678fed43bc55668e24520b2a31af822a9a4725c9b0
-MISC ChangeLog 31379 RMD160 95f936daf5cc4a3d31f602505f670182f76de9e3 SHA1 720ae0f8dcbf3b578e734e1f9064db63b1c44dd2 SHA256 cadba155f8174dab546d7a012983e39e5d1c0455f5ae35c9610e99337da31731
+MISC ChangeLog 31544 RMD160 3af8cd9359176ea245e6a6f4c4e4df939a2db102 SHA1 b3e51d7f698c9d1cefeab5b34ca4a12292e74875 SHA256 d5326cb3b4436255fc56f1f92822aa686af03d3309bffa877c005d09381b980c
 MISC metadata.xml 160 RMD160 61ea9f9370afee3db802f40f7c6b2edd2f5347cf SHA1 51cf29a3589cff823294704e225b0de18f65e6dd SHA256 7419f4e73ddd07284403525f1380824fc68280cad69e2dfae0645ad52b33ef10
