@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/gnutls
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/gnutls/ChangeLog,v 1.203 2009/06/09 09:34:29 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/gnutls/ChangeLog,v 1.204 2009/06/10 17:16:16 arfrever Exp $
+
+*gnutls-2.8.1 (10 Jun 2009)
+
+  10 Jun 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  -gnutls-2.8.0.ebuild, +gnutls-2.8.1.ebuild:
+  Version bump.
 
 *gnutls-2.9.1 (09 Jun 2009)
 
